# LAO

./: .gitignore  CMakeLists.txt  README.md
docs/: design.md  future-work.md
examples/: CMakeLists.txt  main.cpp
lao/: config.hpp  lao.hpp
lao/astro/: astro.hpp
lao/astro/body/: base.hpp  jpl_low_precision.hpp
lao/astro/core/: constants.hpp  conversions.hpp  equations.hpp
lao/astro/date/: epoch.hpp  gregorian.hpp
lao/astro/math/: newton_raphson.hpp  transforms.hpp
lao/core/: expression.hpp  forward.hpp  math.hpp
lao/dense/: LU.hpp  jacobi.hpp  matrix.hpp  vector.hpp
lao/linalg/: linalg.hpp
lao/linalg/core/: expression.hpp  forward.hpp
lao/linalg/dense/: LU.hpp  jacobi.hpp  matrix.hpp
lao/linalg/math/: arithmetic.hpp  constraints.hpp  fundamental.hpp
lao/linalg/sparse/: sparse_matrix.hpp
lao/math/: arithmetic.hpp  constraints.hpp  fundamental.hpp
lao/sparse/: sparse_matrix.hpp
scripts/: build.sh  run_tests.sh
tests/: CMakeLists.txt  test_astro_body.cpp  test_dense_matrix.cpp  test_matrix_math.cpp  test_vector.cpp
